--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -12,51 +12,53 @@
     <body>
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">Slide 1</div>
-                <div class="swiper-slide">Slide 2</div>
-                <div class="swiper-slide">Slide 3</div>
+                <div class="swiper-slide">
+                    <div class="wrapper1">
+                        <div class="header">
+                            <div><span>×</span></div>
+                            <div><span>智慧能源</span></div>
+                            <div><span>···</span></div>
+                        </div>
+                        <div class="section">
+                            <div class="section1">
+                                <span>智慧能源</span>
+                            </div>
+                            <div class="section2">
+                                <div>
+                                    <span>汽车充电</span>
+                                </div>
+                                <div>
+                                    <span>电单车充电</span>
+                                </div>
+                                <div>
+                                    <span>共享电池</span>
+                                </div>
+                                <div>
+                                    <span>智慧电力</span>
+                                </div>
+                                <div>
+                                    <span>能源遥测</span>
+                                </div>
+                            </div>
+                            <div class="section3">
+                                <div>
+                                    <span><img src="img/logo-3.png" alt="" /></span>
+                                </div>
+                                <div>
+                                    <span>杭州橡树物联技术有限公司</span>
+                                    <div class="space"></div>
+                                    <span>HANGZHOU OAK IOT TECHNOLOGY CO., LTD</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide" style="background: red">Slide 2</div>
             </div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
         <script src="node_modules/swiper/swiper-bundle.min.js"></script>
         <script src="js/index.js"></script>
-        <!-- <div class="header">
-            <div><span>×</span></div>
-            <div><span>智慧能源</span></div>
-            <div><span>···</span></div>
-        </div>
-        <div class="section">
-            <div class="section1">
-                <span>智慧能源</span>
-            </div>
-            <div class="section2">
-                <div>
-                    <span>汽车充电</span>
-                </div>
-                <div>
-                    <span>电单车充电</span>
-                </div>
-                <div>
-                    <span>共享电池</span>
-                </div>
-                <div>
-                    <span>智慧电力</span>
-                </div>
-                <div>
-                    <span>能源遥测</span>
-                </div>
-            </div>
-            <div class="section3">
-                <div>
-                    <span><img src="img/logo-3.png" alt="" /></span>
-                </div>
-                <div>
-                    <span>杭州橡树物联技术有限公司</span>
-                    <div class="space"></div>
-                    <span>HANGZHOU OAK IOT TECHNOLOGY CO., LTD</span>
-                </div>
-            </div>
-        </div> -->
     </body>
 </html>
