--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -97,6 +97,7 @@
             </div>
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
+            <div class="swiper-scrollbar"></div>
         </div>
         <script src="node_modules/swiper/swiper-bundle.min.js"></script>
         <script src="js/index.js"></script>
