--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -13,6 +13,59 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
+                    <div class="wrapper2">
+                        <div class="header">
+                            <div><span>×</span></div>
+                            <div><span>汽车充电</span></div>
+                            <div><span>···</span></div>
+                        </div>
+                        <div class="section">
+                            <div class="section1">
+                                <div class="navInfo">
+                                    <span>①</span>
+                                    <span>汽车充电-业务介绍</span>
+                                </div>
+                                <div class="detail">
+                                    <span>
+                                        汽车充电业务提供了汽车充电的运营平台，支持汽车直流桩、交流桩、充电插座等设备的接入和运营，您可以自行购买充电桩，选好场地进行安装，即可快速运营，获取收益。
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="section2">
+                                <div>
+                                    <div class="son1"></div>
+                                    <div class="son2"><span>详情见：公众号-支付小程序demo</span></div>
+                                </div>
+                                <div>
+                                    <div class="son1"></div>
+                                    <div class="son2"><span>详情见：公众号-物联商城demo</span></div>
+                                </div>
+                                <div>
+                                    <div class="son1"></div>
+                                    <div class="son2"><span>详情见：公众号-充电后台demo</span></div>
+                                </div>
+                                <div>
+                                    <div class="son1"></div>
+                                    <div class="son2"><span>详情见：公众号-多级代理demo</span></div>
+                                </div>
+                            </div>
+                            <div class="section3">
+                                <div><span>强大的硬件软件支持</span></div>
+                            </div>
+                            <div class="section4">
+                                <div>
+                                    <span><img src="img/logo-3.png" alt="" /></span>
+                                </div>
+                                <div>
+                                    <span>杭州橡树物联技术有限公司</span>
+                                    <div class="space"></div>
+                                    <span>HANGZHOU OAK IOT TECHNOLOGY CO., LTD</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
                     <div class="wrapper1">
                         <div class="header">
                             <div><span>×</span></div>
@@ -54,7 +107,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="wrapper2">
+                    <div class="wrapper3">
                         <div class="header">
                             <div><span>×</span></div>
                             <div><span>汽车充电</span></div>
@@ -63,40 +116,17 @@
                         <div class="section">
                             <div class="section1">
                                 <div class="navInfo">
-                                    <span>①</span>
-                                    <span>汽车充电-业务介绍</span>
-                                </div>
-                                <div class="detail">
-                                    <span>
-                                        汽车充电业务提供了汽车充电的运营平台，支持汽车直流桩、交流桩、充电插座等设备的接入和运营，您可以自行购买充电桩，选好场地进行安装，即可快速运营，获取收益。
-                                    </span>
+                                    <span>②</span>
+                                    <span>汽车充电-特色功能</span>
                                 </div>
                             </div>
-                            <div class="section2">
-                                <div>
-                                    <div class="son1"></div>
-                                    <div class="son2"><span>详情见：公众号-支付小程序demo</span></div>
-                                </div>
-                                <div>
-                                    <div class="son1"></div>
-                                    <div class="son2"><span>详情见：公众号-物联商城demo</span></div>
-                                </div>
-                                <div>
-                                    <div class="son1"></div>
-                                    <div class="son2"><span>详情见：公众号-充电后台demo</span></div>
-                                </div>
-                                <div>
-                                    <div class="son1"></div>
-                                    <div class="son2"><span>详情见：公众号-多级代理demo</span></div>
-                                </div>
-                            </div>
+                            <div class="section2"></div>
                             <div class="section3">
                                 <div><span>强大的硬件软件支持</span></div>
                                 <div class="wrapper">
                                     <div>
                                         <span><img src="img/logo-3.png" alt="" /></span>
                                     </div>
-
                                     <div>
                                         <span>杭州橡树物联技术有限公司</span>
                                         <div class="space"></div>
