--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -13,7 +13,7 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <div class="wrapper2">
+                    <div class="wrapper3">
                         <div class="header">
                             <div><span>×</span></div>
                             <div><span>汽车充电</span></div>
@@ -25,34 +25,20 @@
                                     <span>①</span>
                                     <span>汽车充电-业务介绍</span>
                                 </div>
-                                <div class="detail">
-                                    <span>
-                                        汽车充电业务提供了汽车充电的运营平台，支持汽车直流桩、交流桩、充电插座等设备的接入和运营，您可以自行购买充电桩，选好场地进行安装，即可快速运营，获取收益。
-                                    </span>
-                                </div>
                             </div>
                             <div class="section2">
-                                <div>
-                                    <div class="son1"></div>
-                                    <div class="son2"><span>详情见：公众号-支付小程序demo</span></div>
-                                </div>
-                                <div>
-                                    <div class="son1"></div>
-                                    <div class="son2"><span>详情见：公众号-物联商城demo</span></div>
-                                </div>
-                                <div>
-                                    <div class="son1"></div>
-                                    <div class="son2"><span>详情见：公众号-充电后台demo</span></div>
-                                </div>
-                                <div>
-                                    <div class="son1"></div>
-                                    <div class="son2"><span>详情见：公众号-多级代理demo</span></div>
-                                </div>
+                                <ul class="section2Wrapper">
+                                    <li>品牌化定制</li>
+                                    <li>充电方式灵活</li>
+                                    <li>钱包</li>
+                                    <li>一卡通</li>
+                                    <li>套餐/优惠券</li>
+                                    <li>车桩位一体</li>
+                                    <li>多级代理</li>
+                                    <li>图表支持</li>
+                                </ul>
                             </div>
                             <div class="section3">
-                                <div><span>强大的硬件软件支持</span></div>
-                            </div>
-                            <div class="section4">
                                 <div>
                                     <span><img src="img/logo-3.png" alt="" /></span>
                                 </div>
@@ -107,7 +93,7 @@
                     </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="wrapper3">
+                    <div class="wrapper2">
                         <div class="header">
                             <div><span>×</span></div>
                             <div><span>汽车充电</span></div>
@@ -116,22 +102,44 @@
                         <div class="section">
                             <div class="section1">
                                 <div class="navInfo">
-                                    <span>②</span>
-                                    <span>汽车充电-特色功能</span>
+                                    <span>①</span>
+                                    <span>汽车充电-业务介绍</span>
+                                </div>
+                                <div class="detail">
+                                    <span>
+                                        汽车充电业务提供了汽车充电的运营平台，支持汽车直流桩、交流桩、充电插座等设备的接入和运营，您可以自行购买充电桩，选好场地进行安装，即可快速运营，获取收益。
+                                    </span>
                                 </div>
                             </div>
-                            <div class="section2"></div>
+                            <div class="section2">
+                                <div>
+                                    <div class="son1"></div>
+                                    <div class="son2"><span>详情见：公众号-支付小程序demo</span></div>
+                                </div>
+                                <div>
+                                    <div class="son1"></div>
+                                    <div class="son2"><span>详情见：公众号-物联商城demo</span></div>
+                                </div>
+                                <div>
+                                    <div class="son1"></div>
+                                    <div class="son2"><span>详情见：公众号-充电后台demo</span></div>
+                                </div>
+                                <div>
+                                    <div class="son1"></div>
+                                    <div class="son2"><span>详情见：公众号-多级代理demo</span></div>
+                                </div>
+                            </div>
                             <div class="section3">
                                 <div><span>强大的硬件软件支持</span></div>
-                                <div class="wrapper">
-                                    <div>
-                                        <span><img src="img/logo-3.png" alt="" /></span>
-                                    </div>
-                                    <div>
-                                        <span>杭州橡树物联技术有限公司</span>
-                                        <div class="space"></div>
-                                        <span>HANGZHOU OAK IOT TECHNOLOGY CO., LTD</span>
-                                    </div>
+                            </div>
+                            <div class="section4">
+                                <div>
+                                    <span><img src="img/logo-3.png" alt="" /></span>
+                                </div>
+                                <div>
+                                    <span>杭州橡树物联技术有限公司</span>
+                                    <div class="space"></div>
+                                    <span>HANGZHOU OAK IOT TECHNOLOGY CO., LTD</span>
                                 </div>
                             </div>
                         </div>
