初步完成3张图

--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -10,47 +10,11 @@
     </head>
 
     <body>
+        <div class="backgroundImg">
+            <img src="img/backgroundImgx.jpg" alt="" />
+        </div>
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="wrapper3">
-                        <div class="header">
-                            <div><span>×</span></div>
-                            <div><span>汽车充电</span></div>
-                            <div><span>···</span></div>
-                        </div>
-                        <div class="section">
-                            <div class="section1">
-                                <div class="navInfo">
-                                    <span>①</span>
-                                    <span>汽车充电-业务介绍</span>
-                                </div>
-                            </div>
-                            <div class="section2">
-                                <ul class="section2Wrapper">
-                                    <li>品牌化定制</li>
-                                    <li>充电方式灵活</li>
-                                    <li>钱包</li>
-                                    <li>一卡通</li>
-                                    <li>套餐/优惠券</li>
-                                    <li>车桩位一体</li>
-                                    <li>多级代理</li>
-                                    <li>图表支持</li>
-                                </ul>
-                            </div>
-                            <div class="section3">
-                                <div>
-                                    <span><img src="img/logo-3.png" alt="" /></span>
-                                </div>
-                                <div>
-                                    <span>杭州橡树物联技术有限公司</span>
-                                    <div class="space"></div>
-                                    <span>HANGZHOU OAK IOT TECHNOLOGY CO., LTD</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="swiper-slide">
                     <div class="wrapper1">
                         <div class="header">
@@ -133,6 +97,45 @@
                                 <div><span>强大的硬件软件支持</span></div>
                             </div>
                             <div class="section4">
+                                <div>
+                                    <span><img src="img/logo-3.png" alt="" /></span>
+                                </div>
+                                <div>
+                                    <span>杭州橡树物联技术有限公司</span>
+                                    <div class="space"></div>
+                                    <span>HANGZHOU OAK IOT TECHNOLOGY CO., LTD</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="wrapper3">
+                        <div class="header">
+                            <div><span>×</span></div>
+                            <div><span>汽车充电</span></div>
+                            <div><span>···</span></div>
+                        </div>
+                        <div class="section">
+                            <div class="section1">
+                                <div class="navInfo">
+                                    <span>①</span>
+                                    <span>汽车充电-业务介绍</span>
+                                </div>
+                            </div>
+                            <div class="section2">
+                                <ul class="section2Wrapper">
+                                    <li>品牌化定制</li>
+                                    <li>充电方式灵活</li>
+                                    <li>钱包</li>
+                                    <li>一卡通</li>
+                                    <li>套餐/优惠券</li>
+                                    <li>车桩位一体</li>
+                                    <li>多级代理</li>
+                                    <li>图表支持</li>
+                                </ul>
+                            </div>
+                            <div class="section3">
                                 <div>
                                     <span><img src="img/logo-3.png" alt="" /></span>
                                 </div>
