--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -119,7 +119,7 @@
                         <div class="section">
                             <div class="section1">
                                 <div class="navInfo">
-                                    <span>①</span>
+                                    <span>②</span>
                                     <span>汽车充电-业务介绍</span>
                                 </div>
                             </div>
