--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -12,8 +12,7 @@
     <body>
         <div class="swiper-container">
             <div class="swiper-wrapper">
-             
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                     <div class="wrapper1">
                         <div class="header">
                             <div><span>×</span></div>
@@ -53,7 +52,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="swiper-slide">
                     <div class="wrapper2">
                         <div class="header">
@@ -64,7 +63,7 @@
                         <div class="section">
                             <div class="section1">
                                 <div class="navInfo">
-                                    <span>①</span>
+                                    <span><img src="img/1@3x.png" alt="" /></span>
                                     <span>汽车充电-业务介绍</span>
                                 </div>
                                 <div class="detail">
@@ -74,20 +73,32 @@
                                 </div>
                             </div>
                             <div class="section2">
-                                <div>
-                                    <div class="son1"></div>
+                                <div class="item">
+                                    <div class="son1">
+                                        <img src="img/圆角矩形5拷贝5@3x.png" alt="" />
+                                        <div class="grandSon"><span>扫码充电</span></div>
+                                    </div>
                                     <div class="son2"><span>详情见：公众号-支付小程序demo</span></div>
                                 </div>
-                                <div>
-                                    <div class="son1"></div>
+                                <div class="item">
+                                    <div class="son1">
+                                        <img src="img/圆角矩形5拷贝6@3x.png" alt="" />
+                                        <div class="grandSon"><span>物联商城</span></div>
+                                    </div>
                                     <div class="son2"><span>详情见：公众号-物联商城demo</span></div>
                                 </div>
-                                <div>
-                                    <div class="son1"></div>
+                                <div class="item">
+                                    <div class="son1">
+                                        <img src="img/圆角矩形5拷贝7@3x.png" alt="" />
+                                        <div class="grandSon"><span>充电后台</span></div>
+                                    </div>
                                     <div class="son2"><span>详情见：公众号-充电后台demo</span></div>
                                 </div>
-                                <div>
-                                    <div class="son1"></div>
+                                <div class="item">
+                                    <div class="son1">
+                                        <img src="img/圆角矩形5拷贝8@3x.png" alt="" />
+                                        <div class="grandSon"><span>多级代理</span></div>
+                                    </div>
                                     <div class="son2"><span>详情见：公众号-多级代理demo</span></div>
                                 </div>
                             </div>
