--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                     <div class="wrapper2">
                         <div class="header">
                             <div><span>×</span></div>
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="swiper-slide">
                     <div class="wrapper3">
                         <div class="header">
@@ -128,20 +128,77 @@
                         <div class="section">
                             <div class="section1">
                                 <div class="navInfo">
-                                    <span>②</span>
+                                    <span>
+                                        <img src="img/2拷贝@3x.png" alt="" />
+                                    </span>
                                     <span>汽车充电-业务介绍</span>
                                 </div>
                             </div>
                             <div class="section2">
                                 <ul class="section2Wrapper">
-                                    <li>品牌化定制</li>
-                                    <li>充电方式灵活</li>
-                                    <li>钱包</li>
-                                    <li>一卡通</li>
-                                    <li>套餐/优惠券</li>
-                                    <li>车桩位一体</li>
-                                    <li>多级代理</li>
-                                    <li>图表支持</li>
+                                    <li>
+                                        <div><img src="img/品牌定制拷贝@3x.png" alt="" /></div>
+                                        <div>
+                                            <span>品牌化定制</span>
+                                            <span>支付、小程序、公众号、APP均可根据您的品牌精心定制化</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div><img src="img/汽车充电桩拷贝2@3x.png" alt="" /></div>
+                                        <div>
+                                            <span>充电方式灵活</span>
+                                            <span>采用扫码、预交费方式充电，支持按金额、时间、电量进行充电</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div><img src="img/钱包(1)拷贝@3x.png" alt="" /></div>
+                                        <div>
+                                            <span>钱包</span>
+                                            <span>支持钱包充值和付款功能</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div><img src="img/一卡通(1)拷贝@3x.png" alt="" /></div>
+                                        <div>
+                                            <span>一卡通</span>
+                                            <span>支持一卡通管理和刷卡充电</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div><img src="img/优惠券拷贝@3x.png" alt="" /></div>
+                                        <div>
+                                            <span>套餐/优惠券</span>
+                                            <span>支持包月套餐，支持优惠券促销活动</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div><img src="img/汽车拷贝@3x.png" alt="" /></div>
+                                        <div>
+                                            <span>车桩位一体</span>
+                                            <span>支持车桩位一体化管理</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div><img src="img/多级栏目拷贝@3x.png" alt="" /></div>
+                                        <div>
+                                            <span>多级代理</span>
+                                            <span>支持多级代理运营模式，支持T+N和B2C实时分润模式</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div><img src="img/数据拷贝@3x.png" alt="" /></div>
+                                        <div>
+                                            <span>图标支持</span>
+                                            <span>丰富的图表支持：监控图、全景图、报表、看板、大数据视图</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div><img src="img/品牌定制拷贝@3x.png" alt="" /></div>
+                                        <div>
+                                            <span>共享充电</span>
+                                            <span>一台桩也能拥有平台获取收益</span>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="section3">
