s初始化页面4

--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -52,7 +52,7 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>  -->
                 <!-- <div class="swiper-slide">
                     <div class="wrapper2">
                         <div class="header">
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                     <div class="wrapper3">
                         <div class="header">
                             <div><span>×</span></div>
@@ -200,6 +200,47 @@
                                         </div>
                                     </li>
                                 </ul>
+                            </div>
+                            <div class="section3">
+                                <div>
+                                    <span><img src="img/logo-3.png" alt="" /></span>
+                                </div>
+                                <div>
+                                    <span>杭州橡树物联技术有限公司</span>
+                                    <div class="space"></div>
+                                    <span>HANGZHOU OAK IOT TECHNOLOGY CO., LTD</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+                <div class="swiper-slide">
+                    <div class="wrapper4">
+                        <div class="header">
+                            <div><span>×</span></div>
+                            <div><span>智慧能源</span></div>
+                            <div><span>···</span></div>
+                        </div>
+                        <div class="section">
+                            <div class="section1">
+                                <span>智慧能源</span>
+                            </div>
+                            <div class="section2">
+                                <div>
+                                    <span>汽车充电</span>
+                                </div>
+                                <div>
+                                    <span>电单车充电</span>
+                                </div>
+                                <div>
+                                    <span>共享电池</span>
+                                </div>
+                                <div>
+                                    <span>智慧电力</span>
+                                </div>
+                                <div>
+                                    <span>能源遥测</span>
+                                </div>
                             </div>
                             <div class="section3">
                                 <div>
