晚上4格布局

--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                 </div>  -->
-                <!-- <div class="swiper-slide">
+                <div class="swiper-slide">
                     <div class="wrapper2">
                         <div class="header">
                             <div><span>×</span></div>
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <!-- <div class="swiper-slide">
                     <div class="wrapper3">
                         <div class="header">
@@ -218,28 +218,30 @@
                     <div class="wrapper4">
                         <div class="header">
                             <div><span>×</span></div>
-                            <div><span>智慧能源</span></div>
+                            <div><span>汽车充电</span></div>
                             <div><span>···</span></div>
                         </div>
                         <div class="section">
                             <div class="section1">
-                                <span>智慧能源</span>
+                                <span><img src="img/3拷贝@3x.png" alt="" /></span>
+                                <span>汽车充电-设备兼容列表</span>
                             </div>
                             <div class="section2">
-                                <div>
-                                    <span>汽车充电</span>
-                                </div>
-                                <div>
-                                    <span>电单车充电</span>
-                                </div>
-                                <div>
-                                    <span>共享电池</span>
-                                </div>
-                                <div>
-                                    <span>智慧电力</span>
-                                </div>
-                                <div>
-                                    <span>能源遥测</span>
+                                <div class="section2Wrapper">
+                                    <div class="s2part1">
+                                        <div class="title">
+                                            <span>—————</span>
+                                            <span>设备</span>
+                                            <span>—————</span>
+                                        </div>
+                                        <ul class="content">
+                                            <li>1</li>
+                                            <li>2</li>
+                                            <li>3</li>
+                                            <li>4</li>
+                                        </ul>
+                                    </div>
+                                    <div class="s2part2"></div>
                                 </div>
                             </div>
                             <div class="section3">
