完成页面4 2配

--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                 </div>  -->
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                     <div class="wrapper2">
                         <div class="header">
                             <div><span>×</span></div>
@@ -117,7 +117,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="swiper-slide">
                     <div class="wrapper3">
                         <div class="header">
@@ -234,12 +234,32 @@
                                             <span>设备</span>
                                             <span>—————</span>
                                         </div>
-                                        <ul class="content">
-                                            <li>1</li>
-                                            <li>2</li>
-                                            <li>3</li>
-                                            <li>4</li>
-                                        </ul>
+                                        <div class="content">
+                                            <div class="item">
+                                                <div class="son1">
+                                                    <img src="img/图层3拷贝@3x.png" alt="" />
+                                                </div>
+                                                <div class="son2"><span>直流充电桩</span></div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="son1">
+                                                    <img src="img/图层5拷贝@3x.png" alt="" />
+                                                </div>
+                                                <div class="son2"><span>交流充电桩</span></div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="son1">
+                                                    <img src="img/图层4拷贝@3x.png" alt="" />
+                                                </div>
+                                                <div class="son2"><span>大功率插座</span></div>
+                                            </div>
+                                            <div class="item">
+                                                <div class="son1">
+                                                    <img src="img/矩形7拷贝@3x.png" alt="" />
+                                                </div>
+                                                <div class="son2"><span>电表</span></div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="s2part2"></div>
                                 </div>
