--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -261,7 +261,24 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="s2part2"></div>
+                                    <div class="s2part2">
+                                        <div class="title">
+                                            <span>—————</span>
+                                            <span>品牌</span>
+                                            <span>—————</span>
+                                        </div>
+                                        <div class="content">
+                                            <div class="line1">
+                                                <img src="img/微信图片_20210126221014拷贝@3x.png" alt="" />
+                                                <img src="img/微信图片_20210126221032拷贝@3x.png" alt="" />
+                                            </div>
+                                            <div class="line2">
+                                                <img src="img/微信图片_20210125164446拷贝@3x.png" alt="" />
+                                                <img src="img/微信图片_20210125164452拷贝@3x.png" alt="" />
+                                                <img src="img/微信图片_20210125164459拷贝@3x.png" alt="" />
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="section3">
