--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -269,13 +269,28 @@
                                         </div>
                                         <div class="content">
                                             <div class="line1">
-                                                <img src="img/微信图片_20210126221014拷贝@3x.png" alt="" />
-                                                <img src="img/微信图片_20210126221032拷贝@3x.png" alt="" />
+                                                <div>
+                                                    <img src="img/微信图片_20210126221014拷贝@3x.png" alt="" />
+                                                    <span>盛弘</span>
+                                                </div>
+                                                <div>
+                                                    <img src="img/微信图片_20210126221032拷贝@3x.png" alt="" />
+                                                    <span>华夏云联</span>
+                                                </div>
                                             </div>
                                             <div class="line2">
-                                                <img src="img/微信图片_20210125164446拷贝@3x.png" alt="" />
-                                                <img src="img/微信图片_20210125164452拷贝@3x.png" alt="" />
-                                                <img src="img/微信图片_20210125164459拷贝@3x.png" alt="" />
+                                                <div>
+                                                    <img src="img/微信图片_20210125164446拷贝@3x.png" alt="" />
+                                                    <span>中恒电气</span>
+                                                </div>
+                                                <div>
+                                                    <img src="img/微信图片_20210125164452拷贝@3x.png" alt="" />
+                                                    <span>艾参崴</span>
+                                                </div>
+                                                <div>
+                                                    <img src="img/微信图片_20210125164459拷贝@3x.png" alt="" />
+                                                    <span>杭州奥能</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
