--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -214,7 +214,7 @@
                         </div>
                     </div>
                 </div> -->
-                <div class="swiper-slide">
+                <!-- <div class="swiper-slide">
                     <div class="wrapper4">
                         <div class="header">
                             <div><span>×</span></div>
@@ -297,6 +297,35 @@
                                 </div>
                             </div>
                             <div class="section3">
+                                <div>
+                                    <span><img src="img/logo-3.png" alt="" /></span>
+                                </div>
+                                <div>
+                                    <span>杭州橡树物联技术有限公司</span>
+                                    <div class="space"></div>
+                                    <span>HANGZHOU OAK IOT TECHNOLOGY CO., LTD</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> -->
+                <div class="swiper-slide">
+                    <div class="wrapper5">
+                        <div class="header">
+                            <div><span>×</span></div>
+                            <div><span>汽车充电</span></div>
+                            <div><span>···</span></div>
+                        </div>
+                        <div class="section">
+                            <div class="section1">
+                                <span><img src="img/3拷贝@3x.png" alt="" /></span>
+                                <span>汽车充电-合作方式</span>
+                            </div>
+                            <div class="section2"></div>
+                            <div class="section3">
+                                <div class="section3Wrapper">123</div>
+                            </div>
+                            <div class="section4">
                                 <div>
                                     <span><img src="img/logo-3.png" alt="" /></span>
                                 </div>
