--- a/smartEnergy.html
+++ b/smartEnergy.html
@@ -318,10 +318,32 @@
                         </div>
                         <div class="section">
                             <div class="section1">
-                                <span><img src="img/3拷贝@3x.png" alt="" /></span>
+                                <span><img src="img/4拷贝@3x.png" alt="" /></span>
                                 <span>汽车充电-合作方式</span>
                             </div>
-                            <div class="section2"></div>
+                            <div class="section2">
+                                <div class="s2p1">合作方式类别</div>
+                                <div class="s2p2">
+                                    <span>橡树合伙人</span>
+                                </div>
+                                <div class="s2p3">
+                                    <div class="info1">代理</div>
+                                    <div class="line1"></div>
+                                    <div class="line2"></div>
+                                    <div class="line3">
+                                        <div class="extraInfo">直采</div>
+                                    </div>
+                                    <div class="info2">橡树云</div>
+                                </div>
+                                <div class="s2p4">
+                                    <div class="info1"></div>
+                                    <div class="line1"></div>
+                                    <div class="line2"></div>
+                                    <div class="line3"></div>
+                                    <div class="info2">私有部署</div>
+                                </div>
+                                <div class="s2p5"></div>
+                            </div>
                             <div class="section3">
                                 <div class="section3Wrapper">123</div>
                             </div>
